--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,11 +6,11 @@
     <meta name="theme-color" content="#A51A3E" />
     <meta
       name="description"
-      content="LvD Wifi Voucher System"
+      content="UniFi Voucher System"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>LvD-Wifi System</title>
+    <title>UniFi Voucher System</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
